second commit today, decided not to add the red mail, but instead opted to make it a lighter shade of gray when hovered over. The only remaining issues are the footer (big issue) and copyright (small issue). I am committing to ensure that any work on the footer does not break the site.

--- a/stream_style.css
+++ b/stream_style.css
@@ -13,6 +13,7 @@ main{
 
 .container {
 	width: 960px;
+	min-height: 100%
 	margin-left: auto;
 	margin-right: auto; 
 }
@@ -87,13 +88,7 @@ main{
 }
 
 .navigation a>img:hover{
-	opacity: 0;
-}
-
-.navigation a >img{
-	background-image: url("mailRed.png");
-	background-repeat: no-repeat;
-	background-size: 100px 100px;
+	opacity: .5;
 }
 
 /*BREADCRUMB NAVIGATION*/
@@ -221,4 +216,28 @@ main{
 	background-color: white;
 }
 
-FOOTER CONSTRUCTION
+/*FOOTER CONSTRUCTION*/
+
+.container .footer {
+	background-color: 666767;
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+}
+
+.footer ul{
+	list-style-type: none;
+}
+
+.footer li{
+	display: inline-block;
+}
+
+.footer a {
+	text-decoration: none;
+	color: black;
+}
+
+.footer a:hover{
+	color: white;
+}
